--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Vision - Browser Object Detection</title>
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   </head>
-  <body>
+  <body class="bg-surface-50">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
