Refactor index.html to improve sessionStorage handling; update package.json for better deployment scripts and dependencies; enhance GitHub Actions workflow for streamlined deployment process.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/img/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="NihonMe - Aplikasi deteksi objek berbasis AI yang dapat mengenali berbagai benda dalam bahasa Indonesia. Gunakan kamera atau unggah gambar untuk mendeteksi objek secara real-time dengan akurasi tinggi." />
     <title>NihonMe - Deteksi Benda dengan AI</title>
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <script>
